@@ -1,6 +1,5 @@
 # English strings for plate-tectonics
 plate-tectonics.name=Plate Tectonics
-plate-tectonics.title=Plate Tectonics
 
-singlePlate.title=One Plate
-doublePlate.title=Two Plates
+onePlate=One Plate
+twoPlates=Two Plates
